--- a/transcendance/src/index.css
+++ b/transcendance/src/index.css
@@ -1,8 +1,14 @@
-
-.content {
-	text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
 }
 
-body{
-	
+.top-banner {
+}
+.content {
+}
+
+.footer {
 }
