--- a/transcendance/src/components/Menu/MenuButton.css
+++ b/transcendance/src/components/Menu/MenuButton.css
@@ -4,10 +4,103 @@ li {
   position: absolute;
   list-style: none;
   color: #f3efff;
-  transform: rotate(calc(360dev / 8));
+  font-size: 80px;
+  background-color: #ff005c;
+  /* background-color: #f3efff; */
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  transition: 1s;
+  transform: rotate(0deg) translateX(300px);
+  transform-origin: 400px;
+  left: 0;
 }
 
-li menu-button menu-button-transition {
-  font-size: 500px;
-  z-index: 5000;
+a:visited {
+  color: #f3efff;
+  /* color: #ff005c; */
+}
+
+a:hover {
+  color: rgb(52, 0, 94);
+}
+
+.zero-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 0));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(0));
+}
+
+.one-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 1));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(1));
+}
+
+.two-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 2));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(2));
+}
+
+.three-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 3));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(3));
+}
+
+.four-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 4));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(4));
+}
+
+.five-t {
+  /* transform-origin: 400px; */
+  transform: rotate(calc(360deg / 6 * 5));
+  transition: 1s;
+  transition-delay: calc(0.2s * var(5));
+}
+
+.play {
+  transform: rotate(calc(360deg / -6 * 0));
+  padding-top: 35px;
+  padding-right: 1px;
+}
+
+.bino {
+  transform: rotate(calc(360deg / -6 * 1));
+  padding-right: 43px;
+  padding-top: 20px;
+}
+
+.user {
+  transform: rotate(calc(360deg / -6 * 2));
+  padding-right: 33px;
+  padding-bottom: 30px;
+}
+
+.leader {
+  transform: rotate(calc(360deg / -6 * 3));
+  padding-bottom: 45px;
+}
+
+.achiev {
+  transform: rotate(calc(360deg / -6 * 4));
+  padding-bottom: 23px;
+  padding-left: 40px;
+}
+
+.chat {
+  transform: rotate(calc(360deg / -6 * 5));
+  padding-top: 23px;
+  padding-left: 43px;
 }
