--- a/transcendance/src/components/Menu/Toggle.css
+++ b/transcendance/src/components/Menu/Toggle.css
@@ -6,28 +6,45 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 225px;
+  height: 225px;
   font-size: 125px;
   background-color: #ff005c;
   color: aliceblue;
   cursor: pointer;
-  z-index: 2;
+  z-index: 99999;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+  transition: 1s;
 }
 
-.toggle-test {
-  background-color: #00bfff;
+.toggle:hover {
+  width: 230px;
+  height: 230px;
+  transition: 1s;
+  font-size: 130px;
+}
+
+.toggle-open {
   position: absolute;
   display: flex;
+  border-radius: 50%;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 225px;
+  height: 225px;
   font-size: 125px;
+  background-color: #ff005c;
+  --i: 0;
   color: aliceblue;
   cursor: pointer;
-  z-index: 2;
+  z-index: 99999;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+  transition: 1s;
+}
+
+.toggle-open:hover {
+  width: 230px;
+  height: 230px;
+  transition: 1s;
+  font-size: 130px;
 }
