--- a/transcendance/src/components/Menu/MenuWheel.css
+++ b/transcendance/src/components/Menu/MenuWheel.css
@@ -1,10 +1,16 @@
 @import "../../index.css";
 
-.menu {
+.menu-wheel {
   position: relative;
   height: 800px;
   width: 800px;
   /* background: greenyellow; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link {
   display: flex;
   align-items: center;
   justify-content: center;
