--- a/transcendance-front/src/components/Profile/profile.css
+++ b/transcendance-front/src/components/Profile/profile.css
@@ -15,7 +15,9 @@
     border-color: red;
     height: 20%;
     max-width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 4fr 1fr;
 }
 
 .primary-stats {
@@ -29,12 +31,27 @@
     align-items: center;
 }
 
+.profile-name-container {
+    min-height: 20%;
+    max-height: 20%;
+    border-style: solid;
+    border-color: yellow;
+}
+
+.profile-name-text {
+    font-size: 1rem;
+}
+
+.profile-image {
+    border-radius: 50%;
+}
+
 img {
     display: inline-block;
     max-width: 40%;
     min-width: 40%;
-    min-height: 100%;
-    max-height: 100%;
+    min-height: 80%;
+    max-height: 80%;
 }
 
 h3 {
