--- a/transcendance/src/Pages/Login.css
+++ b/transcendance/src/Pages/Login.css
@@ -1,13 +1,11 @@
-@import "../index.css";
-
 .login-container {
-  color: whitesmoke;
   display: flex;
   width: 800px;
   height: 800px;
   align-items: center;
   align-content: center;
   justify-content: center;
+  background: var(--);
 }
 
 .login-wrap:hover {
@@ -16,24 +14,57 @@
 
 .login-btn {
   color: #f3efff;
-  background-color: #ff005c;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 30px;
   border-radius: 50%;
-  width: 225px;
-  height: 225px;
+  width: 600px;
+  height: 100px;
   cursor: pointer;
   border: none;
   align-content: center;
   justify-content: center;
-  transition: 0.5s;
+  transition: 1.5s;
 }
 
 .login-btn:hover {
-  color: #5b00a5;
-  width: 235px;
-  height: 235px;
-  transition: 0.5s;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
 }
 
 .login-icon {
-  scale: 1000%;
+  scale: 750%;
+}
+
+.login-42-btn {
+  color: #f3efff;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0.5rem;
+  font-size: 30px;
+  border: none;
+  width: 600px;
+  height: 100px;
+  transition: 1s;
+}
+
+.login-42-btn:hover {
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
