--- a/transcendance-front/src/components/Profile/profile.css
+++ b/transcendance-front/src/components/Profile/profile.css
@@ -6,43 +6,37 @@
 
 .profile-container {
     border-style: solid;
+    border-radius: 30px;
     width: 80vw;
     height: 80vh;
     display: grid;
-    grid-template-rows: 1fr 2fr 2fr;
-}
-
-.profile-header {
-    border-style: solid;
-    border-color: red;
-    height: 20%;
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 4fr 1fr;
+    grid-template-rows: 20% 80%;
 }
 
 /* Profile header */
-.primary-stats {
+.profile-header-container {
     border-style: solid;
-    border-color: blue;
-    max-width: 60%;
-    min-width: 60%;
-    max-height: 100%;
-    min-height: 100%;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    display: grid;
-    align-items: center;
+    border-color: red;
+    height: 100%;
+    width: 100%;
+    display: flex;
 }
 
-.profile-name-container {
-    min-height: 20%;
-    max-height: 20%;
+.profile-id-container {
+    min-width: 30%;
+    max-width: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.profile-image {
+    border-radius: 50%;
     border-style: solid;
-    border-color: yellow;
+    border-color: pink;
+    max-width: 100%;
+    margin: auto;
+    margin-bottom: 1rem;
 }
 
 .profile-name-text {
@@ -50,14 +44,20 @@
     font-size: 1.25rem;
 }
 
-.profile-image {
-    border-radius: 50%;
-    border-style: solid;
-    border-color: pink;
-    min-width: 100px;
-    max-width: 100px;
-    max-height: 100px;
+.profile-status {
     margin: auto;
+    font-size: 1rem;
+}
+
+.primary-stats {
+    border-style: solid;
+    border-color: blue;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    
 }
 
 .primary-stats h3 {
@@ -65,14 +65,23 @@
     border-color: green;
     font-size: 2rem;
 }
+/* Profile Content */
+.profile-selector-container {
+    border-style: solid;
+    border-color: green;
+    display: flex;
+    height: 8%;
+}
 
-/* Profile Achievements */
-.profile-achievements-container {
+.selector-button {
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+/* Profile Content */
+.profile-content-container {
     border-style: solid;
     border-color: cyan;
+    min-height: 100%;
 }
 
-/* Profile Friends */
-.profile-friends-container {
-    
-}
