Added some friends

--- a/transcendance-front/src/components/Profile/profile.css
+++ b/transcendance-front/src/components/Profile/profile.css
@@ -8,9 +8,12 @@
     border-style: solid;
     border-radius: 30px;
     width: 80vw;
+    min-width: 500px;
+    max-width: 1800px;
     height: 80vh;
+    min-height: 500px;
     display: grid;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 200px auto;
 }
 
 /* Profile header */
@@ -22,19 +25,41 @@
     display: flex;
 }
 
+.profile-header-container > * {
+    border-style: solid;
+    border-color: pink;
+    flex: 1 1 0px;
+}
+
 .profile-id-container {
-    min-width: 30%;
-    max-width: 30%;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 0;
+}
+
+.id-container-info {
     display: flex;
     flex-direction: column;
     padding: 1rem;
 }
 
+.id-container-buttons {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 1rem 0;
+    row-gap: 1rem;
+}
+
+.id-container-buttons button {
+    width: 100px;
+}
+
 .profile-image {
     border-radius: 50%;
     border-style: solid;
-    border-color: pink;
-    max-width: 100%;
+    border-color: green;
+    width: 100px;
+    min-height: 100px;
     margin: auto;
     margin-bottom: 1rem;
 }
@@ -52,7 +77,6 @@
 .primary-stats {
     border-style: solid;
     border-color: blue;
-    width: 100%;
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -63,14 +87,23 @@
 .primary-stats h3 {
     border-style: solid;
     border-color: green;
+    white-space: nowrap;
     font-size: 2rem;
 }
+
+.secondary-stats p {
+    font-size: 1rem;
+}
+
 /* Profile Content */
 .profile-selector-container {
     border-style: solid;
     border-color: green;
     display: flex;
-    height: 8%;
+    height: 40px;
+    min-height: 40px;
+    max-height: 40px;
+
 }
 
 .selector-button {
@@ -85,3 +118,52 @@
     min-height: 100%;
 }
 
+/* Friends Content */
+.friends-content-individual {
+    border-style: solid;
+    border-color: gold;
+    height: 100px;
+    display: flex;
+}
+
+.friends-content-individual > * {
+    border-style: solid;
+    border-color: cyan;
+}
+
+.individual-id {
+    display: grid;
+    grid-template-columns: 100px 200px;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+        "image name"
+        "image status";
+}
+
+.individual-id img {
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    margin: auto 10px;
+    grid-area: image;
+}
+
+.individual-id h4 {
+    font-size: 2rem;
+    grid-area: name;
+    margin-top: 10px;
+}
+
+.individual-id p {
+    font-size: 1rem;
+    grid-area: status;
+}
+
+.individual-stats {
+    padding: 10px;
+    min-width: 100px;
+}
+
+.individual-stats h3 {
+    font-size: 1.5rem;
+}
