--- a/transcendance-front/src/components/Profile/profile.css
+++ b/transcendance-front/src/components/Profile/profile.css
@@ -110,11 +110,17 @@
     font-size: 1.2rem;
 }
 
-/* Profile Content */
+.specific-content {
+    overflow-y: auto;
+}
+
 .profile-content-container {
     border-style: solid;
     border-color: cyan;
     min-height: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Friends Content */
