--- a/app/src/components/Pong/Pong.css
+++ b/app/src/components/Pong/Pong.css
@@ -2,3 +2,10 @@
     font-size: 0px;
     border: 2px solid white;
 }
+
+.pong-text {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 800;
+}
