2 player can move

--- a/app/src/components/Pong/Pong.css
+++ b/app/src/components/Pong/Pong.css
@@ -4,8 +4,10 @@
 }
 
 .pong-text {
+    color: azure;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 20px;
     font-weight: 800;
 }
