--- a/app/src/Pages/PongRoom.css
+++ b/app/src/Pages/PongRoom.css
@@ -10,6 +10,11 @@
     padding-bottom: 20px;
 }
 
+.text2 {
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+
 .button-78 {
     background-color: initial;
     border-style: none;
