--- a/app/src/components/Pong/Pong.css
+++ b/app/src/components/Pong/Pong.css
@@ -11,3 +11,22 @@
     font-size: 20px;
     font-weight: 800;
 }
+
+.column {
+    float: left;
+    margin-left: 33.33%;
+    width: 33.33%;
+  }
+.column2 {
+    float: left;
+    text-align: right;
+    width: 33.33%;
+    margin-bottom: 10px;
+}
+  
+  /* Clear floats after the columns */
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
