--- a/app/src/components/Chat/MessageWindow.css
+++ b/app/src/components/Chat/MessageWindow.css
@@ -1,8 +1,13 @@
 .msg-window {
-  /* display: flex;
-  position: absolute; */
-  height: 93%;
+  display: flex;
+  flex-direction: column;
+  /* position: absolute; */
+  height: 92%;
   width: 100%;
   color: rgb(255, 255, 255);
   font-size: 30px;
+  overflow-y: auto;
+  scrollbar-base-color: blueviolet;
+  scrollbar-color: blue;
+  /* align-items: center; */
 }
