--- a/app/src/components/Chat/Channel.css
+++ b/app/src/components/Chat/Channel.css
@@ -5,6 +5,10 @@
   margin-left: 4px;
 }
 
+.channel-wrapper {
+  margin-top: 10px;
+  min-width: 100%;
+}
 .channel-box {
   display: flex;
   min-width: 100%;
@@ -12,6 +16,25 @@
   height: 100%;
   border: 1px solid rgb(180, 180, 180);
   border-radius: 10px;
-  margin-top: 5px;
   cursor: pointer;
+}
+
+.leave-icon {
+  cursor: pointer;
+  display: flex;
+  font-size: 20px;
+  color: #ff005c;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.join-icon {
+  cursor: pointer;
+  display: flex;
+  font-size: 20px;
+  color: #00c88c;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 10px;
 }
