--- a/app/src/components/Chat/AddChannel.module.css
+++ b/app/src/components/Chat/AddChannel.module.css
@@ -2,7 +2,7 @@
   display: flex;
   padding-bottom: 10px;
   background-color: rgba(56, 56, 56, 0.505);
-  border: 1px solid rgb(180, 180, 180);
+  border: 1px solid rgba(102, 101, 101, 0.505);
   border-radius: 10px;
   padding-top: 10px;
   margin-top: 10px;
