--- a/app/src/components/Chat/Channel/AddPopup.module.css
+++ b/app/src/components/Chat/Channel/AddPopup.module.css
@@ -31,7 +31,6 @@
   flex-direction: column;
   position: relative;
   padding: 15px;
-  width: 35%;
   max-width: 640px;
   background-color: #f3efff;
   border-radius: 10px;
@@ -67,4 +66,31 @@
 
 .private {
   margin-left: 15px;
+}
+
+.error-msg {
+  display: flex;
+  flex-direction: column;
+  font-size: small;
+}
+
+.msg-list {
+  list-style: square;
+  margin-left: 10px;
+  font-size: small;
+  color: red;
+}
+
+.error-wrap {
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.exit {
+  position: absolute;
+  left: 7px;
+  top: 7px;
+  color: #ff005c;
+  cursor: pointer;
+  font-size: 18px;
 }
