--- a/app/src/components/Pong/Pong.css
+++ b/app/src/components/Pong/Pong.css
@@ -14,19 +14,19 @@
 
 .column {
     float: left;
-    width: 33.33%;
+    width: 16.66%;
   }
+
 .column2 {
     float: left;
     text-align: center;
     width: 33.33%;
-    margin-bottom: 10px;
 }
 
 .column3 {
-    float: left;
-    width: 33.33%;
-    margin-bottom: 10px;
+    float: right;
+    text-align: right;
+    width: 16.66%;
 }
   
   /* Clear floats after the columns */
