working on media queries for mobile

--- a/app/src/Pages/Profile.module.css
+++ b/app/src/Pages/Profile.module.css
@@ -8,6 +8,7 @@
     min-height: 500px;
     display: grid;
     grid-template-rows: 200px auto;
+    grid-template-columns: 100%;
 }
 
 .profile-buttons {}
