--- a/app/src/components/Profile/MatchCard.module.css
+++ b/app/src/components/Profile/MatchCard.module.css
@@ -1,56 +1,52 @@
-/* History Content */
-.match-content-individual {
-    /* border-style: solid; */
-    height: 120px;
+.match-container {
     display: flex;
+    flex-direction: row;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 150px;
+    max-height: 150px;
+    border-bottom: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    align-items: center;
+    /* overflow: hidden; */
 }
 
-.match-content-individual>* {
-    /* border-style: solid; */
-}
-
-.me-id {
+.winner-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.match-id {
-    display: flex;
+.match-picture {
+    min-width: 75px;
+    max-width: 75px;
+    min-height: 75px;
+    max-height: 75px;
+    border-radius: 50%;
+    padding: 5px;
 }
 
-.match-id h3 {
-    margin: auto 10px;
+.match-score-container {
+    flex: 1;
+}
+
+.match-name {
     font-size: 2rem;
 }
 
-.match-id .me-id img {
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-    margin: 5px 10px;
-    /* border-style: solid; */
+.match-score {
+    font-size: 3rem;
 }
 
-.match-id .me-id h4 {
-    font-size: 1rem;
-    /* border-style: solid; */
+.match-winorlose {
+    font-size: 2rem;
 }
 
-.foe-id {
+.loser-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
-}
-
-.match-id .foe-id img {
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-    margin: 5px 10px;
-    /* border-style: solid; */
-}
-
-.match-id .foe-id h4 {
-    font-size: 1rem;
-    /* border-style: solid; */
-    text-align: center;
+    align-items: center;
 }
