--- a/app/src/components/Profile/ProfileConfig.module.css
+++ b/app/src/components/Profile/ProfileConfig.module.css
@@ -1,3 +1,11 @@
+.config-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-style: solid;
+    border-color: gold;
+}
+
 .config-header {
     font-size: 3rem;
 }
