--- a/app/src/components/Chat/Channel/Channel.module.css
+++ b/app/src/components/Chat/Channel/Channel.module.css
@@ -14,6 +14,7 @@
   min-width: 100%;
   background-color: rgba(56, 56, 56, 0.505);
   height: 100%;
+  max-height: 100%;
   border: 1px solid rgba(102, 101, 101, 0.505);
   border-radius: 8px;
   cursor: pointer;
@@ -23,6 +24,25 @@
   padding: 15px 27px;
   max-width: 100%;
   position: relative;
+  /* background-color: aqua; */
+}
+
+.channel-box-selected {
+  display: flex;
+  min-width: 100%;
+  background-color: rgba(77, 77, 77, 0.505);
+  height: 100%;
+  max-height: 100%;
+  border: 1px solid #00c88c66;
+  border-radius: 8px;
+  cursor: pointer;
+  word-wrap: break-word;
+  line-height: 24px;
+  font-size: 20px;
+  padding: 15px 27px;
+  max-width: 100%;
+  position: relative;
+  /* background-color: aqua; */
 }
 
 .leave-icon {
@@ -31,7 +51,7 @@
   font-size: 20px;
   color: #ff005c;
   align-self: center;
-  margin-left: auto;
+  margin-left: 10px;
   margin-right: 3px;
 }
 
@@ -42,5 +62,15 @@
   color: #00c88c;
   align-self: center;
   margin-left: auto;
+  margin-right: 3px;
+}
+
+.chat-icon {
+  color: #f3efff;
+  margin-left: auto;
+  cursor: pointer;
+  display: flex;
+  font-size: 22px;
+  align-self: center;
   margin-right: 3px;
 }
