--- a/app/src/Pages/Leaderboard.module.css
+++ b/app/src/Pages/Leaderboard.module.css
@@ -1,5 +1,4 @@
 .leaderboard-container {
-    border-style: solid;
     border-color: red;
     min-width: 100%;
     min-height: 100%;
@@ -28,15 +27,11 @@
 }
 
 .leaderboard-top-ten {
-    border-style: solid;
-    border-color: gold;
     flex: 1;
     overflow-y: scroll;
 }
 
 .leaderboard-profile {
-    border-style: solid;
-    border-color: blue;
     flex: 0.3;
 }
 
@@ -48,8 +43,7 @@
     align-items: stretch;
     min-height: 125px;
     max-height: 125px;
-    border-style: solid;
-    border-color: red;
+    border-bottom: 2px solid black;
 }
 
 .player-picture-container {
@@ -58,8 +52,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* border-style: solid; */
-    /* border-color: yellow; */
     min-height: 100%;
     max-height: 100%;
 }
@@ -82,8 +74,6 @@
     flex: 1;
     display: flex;
     flex-direction: row;
-    border-style: solid;
-    border-color: aqua;
     min-height: 100%;
     max-height: 100%;
     justify-content: center;
@@ -106,8 +96,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-style: solid;
-    border-color: violet;
     min-height: 100%;
     max-height: 100%;
+}
+
+.leaderboard-profile {
+    display: inline-block;
+    padding: 15px 5px 5px 5px;
+    border-top: 4px solid white;
+
 }
