--- a/app/src/index.css
+++ b/app/src/index.css
@@ -22,6 +22,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* font-family: "Lato", sans-serif; */
+  /* font-family: "Noto Sans", sans-serif; */
+  /* font-family: "Oswald", sans-serif; */
+  /* font-family: "Roboto", sans-serif; */
+  /* font-family: "Source Sans Pro", sans-serif; */
 }
 
 .root-login {
