--- a/app/src/Pages/Profile.module.css
+++ b/app/src/Pages/Profile.module.css
@@ -1,18 +1,19 @@
 .profile-container {
-    border-style: solid;
-    border-radius: 30px;
-    width: 80vw;
-    min-width: 500px;
-    max-width: 1800px;
-    height: 80vh;
-    min-height: 500px;
-    display: grid;
-    grid-template-rows: 200px auto;
-    grid-template-columns: 100%;
+  border-style: solid;
+  border-radius: 30px;
+  width: 80vw;
+  min-width: 500px;
+  max-width: 1800px;
+  height: 80vh;
+  min-height: 500px;
+  display: grid;
+  grid-template-rows: 200px auto;
+  grid-template-columns: 100%;
 }
 
-.profile-buttons {}
+.profile-buttons {
+}
 
 .search-link {
-    font-size: 20px;
+  font-size: 20px;
 }
