--- a/app/src/components/Chat/Channel/AddPopup.module.css
+++ b/app/src/components/Chat/Channel/AddPopup.module.css
@@ -36,6 +36,16 @@
   border-radius: 10px;
 }
 
+.addpop-in-pass {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 33px;
+  max-width: 640px;
+  background-color: #f3efff;
+  border-radius: 10px;
+}
+
 .name {
   margin-left: 50px;
 }
