--- a/app/src/components/Profile/ProfileConfig.module.css
+++ b/app/src/components/Profile/ProfileConfig.module.css
@@ -30,17 +30,19 @@
     display: flex;
     flex-direction: column;
     border-style: solid;
+    justify-content: stretch;
 }
 
-.displayname-error-message-container {
+.error-message-container {
     background-color: rgba(0, 0, 0, 0.315);
     display: flex;
     min-height: 2rem;
     align-items: center;
     text-align: center;
+    margin-top: auto;
 }
 
-.displayname-error-message {
+.error-message {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,13 +59,30 @@
     display: flex;
     flex-direction: column;
     border-style: solid;
-    margin: auto 0;
+    justify-content: stretch;
 }
 
 .config-image-button-container {
     display: flex;
     padding: 10px 10px 20px 10px;
+    flex-direction: column;
+    align-items: left;
 }
+
+.config-image-button-container input {
+    display: none;
+}
+
+
+.config-image-button-container label {
+    padding: 10px;
+    border: 2px solid white;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 20%;
+}
+
+
 
 .config-twofa-container {
     flex: 1;
