change css in pong

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -27,6 +27,7 @@
   /* font-family: "Oswald", sans-serif; */
   /* font-family: "Roboto", sans-serif; */
   /* font-family: "Source Sans Pro", sans-serif; */
+  font-family: Eina01, sans-serif;
 }
 
 .root-login {
