Looks more clean now; included date in match history; Include rank in user profile

--- a/app/src/Pages/Profile.module.css
+++ b/app/src/Pages/Profile.module.css
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-rows: 200px auto;
     grid-template-columns: 100%;
+    overflow: hidden;
 }
 
 .profile-buttons {}
