--- a/app/src/components/Profile/MatchCard.module.css
+++ b/app/src/components/Profile/MatchCard.module.css
@@ -5,7 +5,34 @@
     max-width: 100%;
     min-height: 150px;
     max-height: 150px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid white;
+    /* padding: 10px; */
+    text-align: center;
+    align-items: stretch;
+    /* overflow: hidden; */
+    white-space: nowrap;
+}
+
+.match-date-container {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
+    max-height: 100%;
+    border-right: 1px solid white;
+}
+
+.match-date-container h2 {
+    padding: 10px;
+}
+
+.match-stats-container {
+    flex: 2;
+    display: flex;
+    flex-direction: row;
+    min-height: 100%;
+    max-height: 100%;
     padding: 10px;
     text-align: center;
     align-items: center;
