--- a/app/src/components/Chat/Channel/AddPopup.module.css
+++ b/app/src/components/Chat/Channel/AddPopup.module.css
@@ -46,6 +46,41 @@
   border-radius: 10px;
 }
 
+.addpop-in-user {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 33px;
+  max-width: 640px;
+  background-color: #f3efff;
+  border-radius: 10px;
+  min-width: 400px;
+  min-height: 200px;
+}
+
+.admin-wrap {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  /* background-color: #515050; */
+  height: 121px;
+  left: 50px;
+  width: 300px;
+  top: 35px;
+  z-index: 1;
+  border-radius: 5px;
+  border: solid 1px #ff005c;
+}
+
+.give-wrap {
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
+  border-bottom: black 1px solid;
+  width: 100%;
+  height: 40px;
+}
+
 .name {
   margin-left: 50px;
 }
@@ -64,6 +99,44 @@
   color: #f3efff;
   border: none;
   cursor: pointer;
+}
+
+.action-bar {
+  display: flex;
+}
+
+.user-info {
+  display: flex;
+}
+
+.give-admin {
+  display: flex;
+  position: relative;
+  margin-left: 10px;
+  font-size: 21px;
+  color: black;
+  cursor: pointer;
+}
+
+.give-admin-already {
+  display: flex;
+  position: relative;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 25px;
+  color: rgb(2, 168, 2);
+  cursor: pointer;
+}
+
+.admin-title {
+  color: black;
+  margin-left: 10px;
+}
+
+.admin-title-ban {
+  color: black;
+  margin-left: 10px;
+  margin-right: 8px;
 }
 
 .visibility-row {
@@ -103,4 +176,42 @@
   color: #ff005c;
   cursor: pointer;
   font-size: 18px;
+}
+
+.profile-name {
+  display: flex;
+  position: absolute;
+  color: #f3efff;
+  right: 0px;
+  align-self: center;
+  background-color: #ff005c;
+  width: 250px;
+  padding-left: 100px;
+  height: 20px;
+  top: 10px;
+  border-radius: 5px;
+}
+
+.chatPicture {
+  display: flex;
+  position: absolute;
+  top: -30px;
+  right: -30px;
+  border-radius: 50%;
+  border-style: solid;
+  width: 100px;
+  height: 100px;
+  border: none;
+  z-index: 3;
+}
+
+.timeout {
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  margin: 10px;
+  cursor: pointer;
+  background-color: #ff005c;
+  color: #f3efff;
+  border: none;
 }
