--- a/app/src/components/Profile/MessageUser.module.css
+++ b/app/src/components/Profile/MessageUser.module.css
@@ -1,32 +1,25 @@
-.friend-button {
-    min-width: 100%;
-    margin: auto;
-    font-size: 0.8rem;
-    white-space: nowrap;
-}
-
-.friend-name {
-    font-size: 1rem;
-}
+.button-container {}
 
 .button-78 {
+    text-decoration: none;
+    display: flex;
     background-color: initial;
     border-style: none;
     color: #fff;
     cursor: pointer;
     font-family: Eina01, sans-serif;
     font-weight: 800;
-    max-height: 50px;
     /* min-height: 40px; */
     position: relative;
     z-index: 0;
     flex: 1;
     padding: 10px;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    min-width: 130px;
-    display: flex;
+    align-items: stretch;
+}
+
+.button-78>* {
+    margin: auto;
 }
 
 /* 
