added invite to play button

--- a/app/src/components/Chat/Users/ChatProfileCard.module.css
+++ b/app/src/components/Chat/Users/ChatProfileCard.module.css
@@ -48,3 +48,11 @@
   position: relative;
   width: 100%;
 }
+
+.play-icon {
+  display: flex;
+  position: absolute;
+  color: #01ab78;
+  top: 8px;
+  cursor: pointer;
+}
