--- a/app/src/components/Profile/SearchBar.module.css
+++ b/app/src/components/Profile/SearchBar.module.css
@@ -9,6 +9,14 @@
     display: flex;
 }
 
+
+.search-bar input {
+    background-color: rgba(255, 255, 255, 0.379);
+    top: 50px;
+    /* margin-top: 10px; */
+    border-radius: 10px;
+}
+
 .search-results {
     overflow-y: auto;
 }
